# SunKV

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cleanup_debug.sh  debug_arc_test  debug_wal.cpp  fixed_cache_test  simple_wal_test.cpp  start_server.sh  sunkv.conf  test_split  test_split.cpp  压测报告.md
.cursor/plans/: pubsub最小闭环实现_85425437.plan.md  week3可观测性方案_06a730ca.plan.md
.github/workflows/: ci-fast.yml  ci-full.yml  cmake-single-platform.yml
client/: simple_client.cpp  sunkvClient.cpp
client/include/: Client.h  Error.h  RespValue.h  Result.h
client/src/: Client.cpp  RespCodec.cpp  RespCodec.h
command/: Command.cpp  Command.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandRegistry.cpp  CommandRegistry.h  Command_old.h  SimplePingCommand.h
command/commands/: DelCommand.cpp  DelCommand.h  EchoCommand.cpp  EchoCommand.h  ExistsCommand.cpp  ExistsCommand.h  ExpireCommand.cpp  ExpireCommand.h  FlushAllCommand.cpp  FlushAllCommand.h  GetCommand.cpp  GetCommand.h  KeysCommand.cpp  KeysCommand.h  PersistCommand.cpp  PersistCommand.h  PingCommand.cpp  PingCommand.h  SetCommand.cpp  SetCommand.h  TTLCommand.cpp  TTLCommand.h
common/: Config.cpp  Config.h  DataValue.h  MemoryPool.cpp  MemoryPool.h
data/snapshot/: snapshot_20260403_181844_0.snap  snapshot_20260403_183035_0.snap  snapshot_20260403_193144_0.snap  snapshot_20260404_154434_0.snap  snapshot_20260404_155826_0.snap  snapshot_20260404_180426_0.snap  snapshot_20260405_141803_0.snap  snapshot_20260405_142049_0.snap  snapshot_20260405_142307_0.snap  snapshot_20260405_142816_0.snap  snapshot_20260405_143040_0.snap  snapshot_20260405_145903_0.snap  snapshot_20260405_150213_0.snap  snapshot_20260405_160814_0.snap  snapshot_20260405_172804_0.snap  snapshot_20260405_174257_0.snap
doc/: 7.2性能优化详细记录.md  8.1功能测试过程记录.md  8.2性能优化总览.md  8.2性能优化汇报版.md  8.2性能测试记录.md  8.3稳定性测试记录.md  API文档.md  Redis_vs_SunKV_QPS对比.md  STAR项目总结.md  SunKV_四周功能扩展与交付路线图_20260420.md  SunKV_项目架构设计文档.md  WALTest段错误问题解决记录.md  bench_writev_quantify.txt  bugfix_buffer_casting.md  client_api.md  demo_runbook.md  final_delivery_2026Q2.md  interview_pitch_5min.md  pubsub最小闭环实现_85425437.md  storage2_详细说明_20260414.md  主功能redis_cli问题清单_20260413.md  信号优雅关闭修复记录.md  修复buffer类型转换问题.md  修复记录_202604_WAL上限单次大append失效.md  全项目双轨与风险审查清单_20260413.md  初始开发计划.md  存储模块v2.md  存储重构执行清单_20260414.md  开发计划.md  性能优化.md  性能报告.md  日志与配置系统问题清单.md  测试文件使用说明.md  深度技术解析.md  源码阅读清单.md  设计文档.md  质量门禁与贡献指南.md  进度总结.md  连接关闭时序断言问题修复记录.md  项目双轨问题分析报告.md
doc/perf/: abs_get_run1.txt  abs_get_run2.txt  abs_get_run3.txt  abs_mixed_run1.txt  abs_mixed_run2.txt  abs_mixed_run3.txt  abs_set_run1.txt  abs_set_run2.txt  abs_set_run3.txt  current_abs_raw_metrics_20260424.json
docs/: commit_log.md  enhanced_commands.md  full_commit_history.md  graceful_shutdown_debugging_report.md  graceful_shutdown_fix_log.md  graceful_shutdown_implementation.md  log_config_fix_record.md  multitype_enhancement.md  persistence_duplicate_fix.md  persistence_implementation.md  server_cleanup_plan.md  snapshot_fix_record.md  testing_guidelines.md  ttl_fix_record.md  ttl_implementation.md
network/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  Poller.cpp  Poller.h  Socket.cpp  Socket.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timer.cpp  Timer.h  TimerQueue.cpp  TimerQueue.h  logger.cpp  logger.h
protocol/: RESPParser.cpp  RESPParser.h  RESPSerializer.cpp  RESPSerializer.h  RESPType.cpp  RESPType.h
scripts/: clang_format_check.sh  clang_tidy_check.sh  compatibility_redis_cli.sh  demo_all_in_one.sh  functional_suite.sh  main_functional_redis_cli.sh  no_stdio_runtime_check.sh  perf_profile.sh  redis_benchmark_stable.sh  stability_suite.sh  start_client.sh  start_server.sh  stop_server.sh  storage2_recovery_10k_debug.sh  test_all.sh
server/: ArrayCmdDispatch.cpp  ArrayCmdDispatch.h  Config.cpp  Config.h  Server.cpp  Server.h  main.cpp  main.cpp.bak  simple_main.cpp
storage/: ARCCache.h  CachePolicy.h  CachedShardedKVStore.h  CachedStorageEngine.h  LFUCache.h  LRUCache.h  Recovery.cpp  Recovery.h  ShardedKVStore.cpp  ShardedKVStore.h  Snapshot.cpp  Snapshot.h  StorageEngine.cpp  StorageEngine.h  WAL.cpp  WAL.h
storage2/: Factory.cpp  Factory.h
storage2/api/: IStorageAPI.h  StatusCode.h  StorageResult.h
storage2/backend/: IBackend.h  InMemoryBackend.cpp  InMemoryBackend.h
storage2/decorators/: OrchestratedStorageAPI.cpp  OrchestratedStorageAPI.h
storage2/engine/: Mutation.h  StorageEngine.cpp  StorageEngine.h  Time.cpp  Time.h
storage2/model/: DataValue.h  HashValue.h  ListValue.h  SetValue.h  StringValue.h
storage2/persistence/: DataValueCodec.cpp  DataValueCodec.h  PersistenceOrchestrator.cpp  PersistenceOrchestrator.h  RecordCodec.cpp  RecordCodec.h  SnapshotReader.cpp  SnapshotReader.h  SnapshotWriter.cpp  SnapshotWriter.h  WalCodec.cpp  WalCodec.h  WalReader.cpp  WalReader.h  WalWriter.cpp  WalWriter.h
test/: basic_commands_test.cpp  cache_algorithms_test.cpp  cached_storage_test.cpp  command_error_test.cpp  command_framework_test.cpp  command_integration_test.cpp  command_unit_test.cpp  compatibility_redis_cli_stage8_1.sh  concurrent_connection_test.cpp  connection_lifecycle_test.cpp  epoll_edge_cases_test.cpp  functional_suite_stage8_1.sh  memory_pool_test.cpp  multithread_tcp_test.cpp  performance_benchmark_test.cpp  persistence_test.cpp  recovery_test.cpp  resp_network_integration_test.cpp  resp_pipeline_test.cpp  resp_protocol_test.cpp  resp_simple_test.cpp  sharded_kvstore_test.cpp  snapshot_test.cpp  stage8_2_root_profile.sh  stage8_3_stability_suite.sh  storage_engine_test.cpp  tcp_server_test.cpp  timer_test.cpp  wal_test.cpp
test/client/: client_basic_integration_test.cpp  client_resp_codec_test.cpp  (+2 more)
tmp/: debug_reader.cpp  debug_reader_test.cpp  final_persistence_test.cpp  persistence_test.cpp  quick_recovery_test.cpp  read_wal_test.cpp  simple_persistence_test.cpp
tool/: dump_persistent.cpp
(+44 files in other folders)
